--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,7 +1,8 @@
 .logo {
-  max-width: 10%;
+  transform: scale(0.5);
+  max-width: 20%;
   max-height: 10%;
-  display: block;
+  display: inline-block;
 }
 
 h1 {
@@ -25,10 +26,18 @@ h1 {
   font-weight: 200;
   transition: all 0.5s ease;
   letter-spacing: 2px;
+  text-decoration: none;
 }
 
 .list {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 0.5em;
+}
+
+.list a.active {
+  background-color: aqua;
+  color: white;
+  font-size: 1em;
+  font-weight: 300;
 }
