--- a/src/styles/Dragons.module.css
+++ b/src/styles/Dragons.module.css
@@ -6,8 +6,8 @@
 
 .dragonList {
   display: grid;
-  grid-template-columns: 20% 70%;
-  grid-template-columns: 10% 80%;
+  grid-template-columns: 20% 70% 10%;
+  grid-template-rows: 30% 30%;
   height: fit-content;
   margin-bottom: 3em;
   gap: 30px;
