--- a/src/styles/Cards.module.css
+++ b/src/styles/Cards.module.css
@@ -1,19 +1,18 @@
-.dragonCard {
+.card {
   display: flex;
   flex-direction: column;
   margin: 1em 0 1em 0;
 }
 
-.dragonList {
+.list {
   display: grid;
-  grid-template-columns: 20% 70% 10%;
-  grid-template-rows: 30% 30%;
+  grid-template-columns: 20% 100% 10%;
   margin-bottom: 3em;
   gap: 30px;
 }
 
 .image {
   display: inline-block;
-  width: 250px;
-  height: 150px;
+  max-width: 100%;
+  height: auto;
 }
