--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ a {
 
 .nav {
   align-items: center;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #cacacadb;
   border-radius: 3px;
   width: 100%;
 }
@@ -86,14 +86,4 @@ a {
 .table {
   flex: 0 0 calc(33.33% - 10px);
   margin-right: 10px;
-}
-
-.rounded-top {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.rounded-bottom {
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
