Fix linter error

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -5,7 +5,7 @@ $success: #28a745;
 $danger: #dc3545;
 $warning: #ffc107;
 $info: #18a2b8;
-$light: #ffffff;
+$light: #fff;
 $dark: #343a40;
 $border-radius: 10px;
 
